--- a/src/assets/styles/main/home/intro.scss
+++ b/src/assets/styles/main/home/intro.scss
@@ -69,8 +69,6 @@
 }
 
 .video {
-  @include reset-btn;
-  display: flex;
   position: absolute;
   top: 0;
   right: 0;
@@ -91,6 +89,27 @@
     svg {
       opacity: 1;
     }
+  }
+}
+
+.button {
+  @include reset-btn;
+  display: block;
+}
+
+.iframe {
+  position: relative;
+  padding-bottom: 56.25%;
+  padding-top: 25px;
+  height: 0;
+  display: none;
+
+  iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
   }
 }
 
