--- a/src/pug/home/team/advisors.pug
+++ b/src/pug/home/team/advisors.pug
@@ -1,5 +1,5 @@
 mixin advisor({img, name, title})
-  div(css-module='team.advisors.advisor')
+  div(css-module='team.advisors.advisor' data-team)
     button
       if img
         +img(img)
