--- a/src/pug/home/team/founders.pug
+++ b/src/pug/home/team/founders.pug
@@ -1,5 +1,5 @@
 mixin vip({img, name, title, extra, supreme})
-  div(css-module='team.founders.vip')
+  div(css-module='team.founders.vip' data-team)
     button
       if img
         +img(img)
