--- a/src/pug/home/team/commies.pug
+++ b/src/pug/home/team/commies.pug
@@ -1,5 +1,5 @@
 mixin commie({img, name, title})
-  div(css-module='team.core.core')
+  div(css-module='team.core.core' data-team)
     button
       if img
         +img(img)
