--- a/src/assets/styles/main/home/sticky-navigation.scss
+++ b/src/assets/styles/main/home/sticky-navigation.scss
@@ -13,15 +13,15 @@
   left: 0;
   width: 100%;
   z-index: 10;
-}
 
-.pinned {
-  transform: translateY(0);
-}
+  &.pinned {
+    transform: translateY(0);
+  }
 
-.unpinned {
-  transform: translateY(-100%);
-  visibility: hidden;
+  &.unpinned {
+    transform: translateY(-100%);
+    visibility: hidden;
+  }
 }
 
 .navigation {
