--- a/src/pug/home/hero.pug
+++ b/src/pug/home/hero.pug
@@ -1,4 +1,4 @@
-section(css-module="home.hero.wrapper")
+section#hero(css-module="home.hero.wrapper")
   include menu
   .container
     div(css-module="home.hero.row")
