--- a/src/pug/faqs.pug
+++ b/src/pug/faqs.pug
@@ -6,5 +6,10 @@ block content
     include faqs/header
     include faqs/navigation
     include faqs/accordion
+    include faqs/general
+    include faqs/value
+    include faqs/token
+    include faqs/post
+
     include home/footer
     include home/copyright
