--- a/src/pug/faqs.pug
+++ b/src/pug/faqs.pug
@@ -1,7 +1,7 @@
 extends layouts/layout-primary
 
 block content
-  #faqs(css-module='faqs.background.color')
+  #faqs-page(css-module='faqs.background.color')
     include faqs/menu
     include faqs/header
     include faqs/navigation
