--- a/src/pug/faqs/header.pug
+++ b/src/pug/faqs/header.pug
@@ -1,3 +1,3 @@
-header
+header(css-module='faqs.header.wrapper')
   .container-620
-    h1 Frequently Asked Questions
+    h1(css-module='faqs.header.title') Frequently Asked Questions
