--- a/src/pug/faqs/navigation.pug
+++ b/src/pug/faqs/navigation.pug
@@ -1,6 +1,6 @@
-nav
+nav(css-module='faqs.navigation.wrapper')
   .container-620
-    ul
+    ul(css-module='faqs.navigation.links')
       li: a.active(href='#general') General
       li: a(href='#value') Value Proposition
       li: a(href='#token') Token Sale
