--- a/src/assets/styles/main/faqs/accordion.scss
+++ b/src/assets/styles/main/faqs/accordion.scss
@@ -10,6 +10,11 @@
   overflow: hidden;
 }
 
+.active {
+  background: $white;
+  color: $black;
+}
+
 .button {
   @include reset-btn;
   display: flex;
