faqs done on desktop

--- a/src/pug/faqs/general.pug
+++ b/src/pug/faqs/general.pug
@@ -1,4 +1,4 @@
-section
+section#general
   .container-620
     +faq('Where can I find more information on RNDR?')
     +faq('Are there any communication channels?')
