--- a/src/pug/faqs/navigation.pug
+++ b/src/pug/faqs/navigation.pug
@@ -1,6 +1,6 @@
-nav(css-module='faqs.navigation.wrapper')
+nav(css-module='faqs.navigation.wrapper' data-gumshoe-header)
   .container-620
-    ul(css-module='faqs.navigation.links')
+    ul(css-module='faqs.navigation.links' data-gumshoe)
       li: a.active(href='#general') General
       li: a(href='#value') Value Proposition
       li: a(href='#token') Token Sale
