--- a/src/assets/styles/main/faqs/menu.scss
+++ b/src/assets/styles/main/faqs/menu.scss
@@ -22,6 +22,10 @@
   margin-left: auto;
   margin-right: auto;
 
+  @include breakpoint(desktop) {
+    display: none;
+  }
+
   li + li {
     margin-left: 30px;
   }
@@ -36,5 +40,13 @@
   svg {
     display: block;
     width: 100%;
+  }
+}
+
+.burger {
+  display: none;
+  @include breakpoint(desktop) {
+    display: block;
+    @include reset-btn;
   }
 }
