--- a/src/assets/styles/main/abstracts/_mixins.scss
+++ b/src/assets/styles/main/abstracts/_mixins.scss
@@ -30,3 +30,7 @@
     @error "Sadly #{$breakpoint} does not exist 😩 please check Manila's _settings.scss to know which you can use";
   }
 }
+
+@mixin fw ($num) {
+  font-weight: $num;
+}
