--- a/src/pug/layouts/includes/mixins.pug
+++ b/src/pug/layouts/includes/mixins.pug
@@ -4,9 +4,9 @@ mixin h(htmlElement, module)
   #{htmlElement}(css-module=module)&attributes(attributes)
     if block
       block
-//- Thanks WesBos!
-mixin svg(filename)
-  !=icon(filename)
+
+mixin svg(filename, ...attributes)
+  !=icon(filename, ...attributes)
 
 mixin img(name, module, alt)
   img(src=`assets/images/${name}` css-module=module alt= alt ? alt : 'An image')
