--- a/src/assets/styles/main/faqs/navigation.scss
+++ b/src/assets/styles/main/faqs/navigation.scss
@@ -5,6 +5,10 @@
   padding: 26px 0;
   transition: .4s;
   visibility: visible;
+
+  @include breakpoint(desktop) {
+    padding: 19px 0 27px;
+  }
 }
 
 .sticky {
@@ -34,8 +38,16 @@
   font-weight: 900;
   color: $cool-gray;
 
+  @include breakpoint(desktop) {
+    font-size: 11px;
+    line-height: 13px;
+  }
+
   li + li {
     margin-left: 30px;
+    @include breakpoint(desktop) {
+      margin-left: 10px;
+    }
   }
 
   a {
@@ -43,6 +55,10 @@
     padding: 6px 12px;
     text-align: center;
     border-radius: 14px;
+
+    @include breakpoint(desktop) {
+      padding: 5px 6px;
+    }
   }
 
   :global {
