mobile faqs menu styles done

--- a/src/pug/faqs.pug
+++ b/src/pug/faqs.pug
@@ -3,6 +3,7 @@ extends layouts/layout-primary
 block content
   #faqs-page(css-module='faqs.background.color')
     include faqs/menu
+    include faqs/mobile-menu
     include faqs/header
     include faqs/navigation
     include faqs/accordion
