--- a/src/pug/faqs/menu.pug
+++ b/src/pug/faqs/menu.pug
@@ -2,7 +2,7 @@ header
   .container-1060
     div(css-module="faqs.menu.wrapper")
       div(css-module='home.menu.row')
-        a(css-module="faqs.menu.logo" href="/" title="Otoy")
+        a(css-module="faqs.menu.logo" href="/" title="RNDR")
           +svg('rndr-mobile')
 
         button(css-module='faqs.menu.toggle')
