--- a/src/pug/home/hero.pug
+++ b/src/pug/home/hero.pug
@@ -7,6 +7,9 @@ section#hero(css-module="home.hero.wrapper")
           +svg('rndr')
         h6(css-module="home.hero.subtitle") OTOY's render token for
         h1(css-module="home.hero.title") Distributed GPU rendering in the blockchain
+        +svg('dash', {
+          'css-module': 'home.hero.dash'
+        })
 
       div(css-module="home.hero.small")
         ul(css-module="home.hero.menu")
