--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -2,19 +2,19 @@ extends layouts/layout-primary
 
 block content
   include home/hero
-  include home/sticky-navigation
-  include home/about
-  include home/intro
-  include home/problem
-  include home/how
-  include home/team
-  include home/sale
-  include home/press
-  include home/roadmap
-  include home/partners
-  include home/faqs
-  include home/ctas
-  include home/footer
-  include home/copyright
+  //-include home/sticky-navigation
+  //-include home/about
+  //-include home/intro
+  //-include home/problem
+  //-include home/how
+  //-include home/team
+  //-include home/sale
+  //-include home/press
+  //-include home/roadmap
+  //-include home/partners
+  //-include home/faqs
+  //-include home/ctas
+  //-include home/footer
+  //-include home/copyright
 
-  include home/team/detail
+  //-include home/team/detail
