--- a/src/pug/home/newsletter.pug
+++ b/src/pug/home/newsletter.pug
@@ -1,5 +1,5 @@
 form(css-module="home.newsletter.form")
-  h4(css-module="home.newsletter.title") Subscribe to #RNDR.
+  h4(css-module="home.newsletter.title") Subscribe to #RNDR for updates.
   p(css-module="home.newsletter.text") Subscribe to our email list to receive news and updates.
 
   div(css-module='home.newsletter.input')
