--- a/src/assets/styles/main/home/project-status.scss
+++ b/src/assets/styles/main/home/project-status.scss
@@ -14,3 +14,23 @@
   text-align: center;
   margin-bottom: 17px;
 }
+
+.progress {
+  display: block;
+  max-width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  @include breakpoint(desktop) {
+    display: none;
+  }
+}
+
+.progress-mobile {
+  display: none;
+  @include breakpoint(desktop) {
+    display: block;
+    max-width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
