--- a/src/pug/home/project-status.pug
+++ b/src/pug/home/project-status.pug
@@ -1,3 +1,4 @@
 div(css-module='home.project-status.wrapper')
   h6(css-module='home.project-status.title') Project Status
-  +svg('progress')
+  +svg('progress', { 'css-module': 'home.project-status.progress' })
+  +img('progress-mobile.png', 'home.project-status.progress-mobile')
