mobile navigation situation crustacean

--- a/src/pug/home/hero.pug
+++ b/src/pug/home/hero.pug
@@ -1,6 +1,6 @@
 section#hero(css-module="home.hero.wrapper")
   include menu
-  .container
+  div(css-module='home.hero.container')
     div(css-module="home.hero.row")
       div(css-module="home.hero.large")
         div(css-module='home.hero.rndr')
