--- a/src/assets/styles/main/home/hero.scss
+++ b/src/assets/styles/main/home/hero.scss
@@ -9,8 +9,8 @@
 
   @include breakpoint(desktop) {
     background: $white;
-    padding-bottom: 37px;
-    min-height: 550px;
+    padding-bottom: 0;
+    min-height: initial;
   }
 }
 
@@ -50,6 +50,8 @@
     max-width: 100%;
     margin: 0;
     padding: 0;
+    display: flex;
+    flex-direction: column;
   }
 }
 
@@ -61,17 +63,36 @@
   line-height: 28px;
 
   @include breakpoint(desktop) {
-    display: none;
+    order: 2;
+    background: $black;
+    color: $white;
+    margin-left: -10px;
+    margin-right: -10px;
+    margin-bottom: 0;
+    padding: 12px 20px;
+    width: calc(100% + 20px);
+    font-size: 12px;
   }
 
   li {
     &:first-child {
       font-weight: 700;
       margin-right: 40px;
+      @include breakpoint(desktop) {
+        background: $red;
+        padding: 0 8px;
+        border-radius: 20px;
+        margin-right: auto;
+      }
     }
     &:nth-child(n+2) {
       margin-left: 18px;
       color: $cool-gray;
+      @include breakpoint(desktop) {
+        @include fw(700);
+        color: $white;
+        margin-left: 14px;
+      }
     }
   }
 }
@@ -109,4 +130,11 @@
     display: block;
     margin-bottom: 20px;
   }
+}
+
+.container {
+  position: relative;
+  max-width: 1170px;
+  margin: 0 auto;
+  padding: 0 ($column-gutter / 2);
 }
