--- a/src/assets/styles/main/home/project-status.scss
+++ b/src/assets/styles/main/home/project-status.scss
@@ -4,6 +4,10 @@
   text-align: center;
   margin-left: auto;
   margin-right: auto;
+
+  @include breakpoint(desktop) {
+    margin-bottom: 37px;
+  }
 }
 
 .title {
