adding mobile navigation on index as well

--- a/src/assets/styles/main/faqs/mobile-menu.scss
+++ b/src/assets/styles/main/faqs/mobile-menu.scss
@@ -7,7 +7,7 @@
   bottom: 0;
   right: 0;
   overflow-y: auto;
-  background: $red;
+  background: rgba($red, 0.97);
   color: $white;
   z-index: 11;
 
