--- a/src/pug/home/menu.pug
+++ b/src/pug/home/menu.pug
@@ -6,7 +6,7 @@ header(css-module="home.menu.header")
       a(css-module="home.menu.rndr" href="/" title="RNDR")
         +svg('rndr-mobile')
 
-      button(css-module='faqs.menu.toggle')
+      button(css-module='faqs.menu.toggle' data-menu-trigger)
         +svg('burger', {
           'css-module': 'faqs.menu.burger'
         })
