--- a/src/pug/home/about.pug
+++ b/src/pug/home/about.pug
@@ -7,6 +7,7 @@ section#about(css-module='home.about.wrapper')
     div(css-module='home.about.row')
       div(css-module='home.about.column')
         h2(css-module='home.about.summary') OTOY provides GPU-based software solutions that aid in the creation and delivery of cutting-edge digital content.
+        button(css-module='home.about.more') Learn more
         div(css-module='home.about.dash')
           +svg('dash')
         p OctaneRender is the world’s first and fastest GPU-accelerated, unbiased, physically correct renderer. Octane uses the graphics card in your computer to render photo-realistic images super fast. With Octane’s parallel compute capabilities, you can create stunning works in a fraction of the time.
