--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -3,7 +3,7 @@ extends layouts/layout-primary
 block content
   include home/hero
   include home/sticky-navigation
-  //-include home/about
+  include home/about
   //-include home/intro
   //-include home/problem
   //-include home/how
