--- a/src/assets/styles/main/home/stats.scss
+++ b/src/assets/styles/main/home/stats.scss
@@ -1,6 +1,11 @@
+@import '../abstracts/index';
+
 .row {
   display: flex;
   align-items: center;
+  @include breakpoint(desktop) {
+    display: none;
+  }
 }
 
 .service {
