--- a/src/pug/home/intro.pug
+++ b/src/pug/home/intro.pug
@@ -6,7 +6,6 @@ section#intro(css-module='home.intro.wrapper')
           h6 Introduction
           h4 Our vision is to democratize computing rendering power
           p This Render token system creates a much more efficient, powerful, and widely-scalable rendering network.
-        +img('gpu.png', 'home.intro.gpu')
       div(css-module='home.intro.large-col')
         div(css-module='home.intro.video' )
           div(css-module='home.intro.iframe')
@@ -14,7 +13,10 @@ section#intro(css-module='home.intro.wrapper')
           button(css-module='home.intro.button' data-youtube-id='QwievZ1Tx-8')
             +img('poster.jpg')
             +svg('play')
-
+    div(css-module='home.intro.row')
+      div(css-module='home.intro.small-col')
+        +img('gpu.png', 'home.intro.gpu')
+      div(css-module='home.intro.large-col')
         div(css-module='home.intro.copy')
           p RNDR will be the first network to transform the power of GPU compute into a decentralized economy of connected 3D assets.
           p OTOY’s vision is to distribute the framework of this existing rendering service through a token-based system built on the Ethereum blockchain.
