--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -4,7 +4,7 @@ block content
   include home/hero
   include home/sticky-navigation
   include home/about
-  //-include home/intro
+  include home/intro
   //-include home/problem
   //-include home/how
   //-include home/team
