--- a/src/assets/styles/main/home/intro.scss
+++ b/src/assets/styles/main/home/intro.scss
@@ -3,6 +3,10 @@
 .wrapper {
   background: $snow;
   position: relative;
+
+  @include breakpoint(desktop) {
+    padding: 36px 0 40px;
+  }
 }
 
 .container {
@@ -15,6 +19,11 @@
 .row {
   display: flex;
   margin: 0 ($column-gutter / -2);
+
+  @include breakpoint(desktop) {
+    display: block;
+    margin: 0;
+  }
 }
 
 .small-col {
@@ -25,6 +34,11 @@
 
   display: flex;
   flex-direction: column;
+
+  @include breakpoint(desktop) {
+    max-width: 100%;
+    padding: 0;
+  }
 }
 
 .large-col {
@@ -32,6 +46,10 @@
   max-width: percentage(7/12);
   flex-basis: percentage(7/12);
   margin-left: auto;
+  @include breakpoint(desktop) {
+    max-width: 100%;
+    padding: 0;
+  }
 }
 
 .intro {
@@ -39,6 +57,12 @@
   max-width: 330px;
   margin-left: auto;
   margin-right: auto;
+  text-align: center;
+
+  @include breakpoint(desktop) {
+    padding-top: 0;
+    max-width: 245px;
+  }
 
   h6 {
     font-family: $lato;
@@ -46,6 +70,12 @@
     line-height: 23px;
     font-weight: 700;
     margin-bottom: 33px;
+    @include breakpoint(desktop) {
+      font-size: 15px;
+      font-weight: 900;
+      line-height: 18px;
+      margin-bottom: 18px;
+    }
   }
 
   h4 {
@@ -53,12 +83,20 @@
     line-height: 45px;
     font-weight: 600;
     margin-bottom: 20px;
+    @include breakpoint(desktop) {
+      font-size: 23px;
+      line-height: 32px;
+      margin-bottom: 32px;
+    }
   }
 
   p {
     font-size: 18px;
     line-height: 29px;
     font-style: italic;
+    @include breakpoint(desktop) {
+      display: none;
+    }
   }
 }
 
@@ -68,6 +106,31 @@
   position: absolute;
   bottom: 0;
   left: 0;
+  @include breakpoint(desktop) {
+    display: none;
+  }
+}
+
+.read-more {
+  display: none;
+  @include breakpoint(desktop) {
+    @include reset-btn();
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 22px auto 0;
+    color: $white;
+    background: $black;
+    border-radius: 20px;
+    font-weight: 700;
+    font-size: 13px;
+    line-height: 17px;
+    padding: 6px 14px;
+  }
+
+  svg {
+    margin-left: 6px;
+  }
 }
 
 .video {
@@ -76,15 +139,28 @@
   right: 0;
   width: percentage(800/1440);
 
+  @include breakpoint(desktop) {
+    position: relative;
+    width: 100%;
+    margin-bottom: 33px;
+  }
+
   img {
     display: block;
     width: 100%;
+    @include breakpoint(desktop) {
+      border-radius: 5px;
+    }
   }
 
   svg {
     @include align;
     opacity: 0.65;
     transition: .3s;
+    @include breakpoint(desktop) {
+      opacity: 0.8;
+      @include size(59px);
+    }
   }
 
   &:hover, &:focus {
@@ -123,7 +199,25 @@
   margin-left: auto;
   margin-right: auto;
 
+  @include breakpoint(desktop) {
+    display: none;
+  }
+
   p + p {
     margin-top: 30px;
+  }
+}
+
+.mobile-intro {
+  display: none;
+  @include breakpoint(desktop) {
+    display: block;
+    font-size: 15px;
+    line-height: 26px;
+    font-weight: 600;
+    text-align: center;
+    max-width: 295px;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
