sticky-navigation tweaks

--- a/src/assets/styles/main/home/sticky-navigation.scss
+++ b/src/assets/styles/main/home/sticky-navigation.scss
@@ -6,7 +6,9 @@
   transition: .4s;
   visibility: visible;
 
-  padding: 20px 0;
+  @include breakpoint(desktop) {
+    padding: 20px 0;
+  }
 }
 
 .sticky {
