--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -5,7 +5,7 @@ block content
   include home/sticky-navigation
   include home/about
   include home/intro
-  //-include home/problem
+  include home/problem
   //-include home/how
   //-include home/team
   //-include home/sale
